--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,7 +4,7 @@ description: Using Scratch 2 in Chromium on the Raspberry Pi
 original_url: https://raspberrypi.org/learning/using-scratch2
 theme: red
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
