project colour theme

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,7 +2,7 @@ title: Using Scratch 2.0 on the Raspberry Pi
 hero_image: images/banner.png
 description: Using Scratch 2 in Chromium on the Raspberry Pi
 original_url: https://raspberrypi.org/learning/using-scratch2
-theme: red
+theme: orange
 duration: 2
 listed: true
 ingredient: false
