Convert to ingredient

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,9 +3,9 @@ hero_image: images/banner.png
 description: Using Scratch 2 in Chromium on the Raspberry Pi
 original_url: https://raspberrypi.org/learning/using-scratch2
 theme: orange
-duration: 2
-listed: true
-ingredient: false
+duration: 1
+listed: false
+ingredient: true
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
 interests: ''
@@ -13,13 +13,3 @@ technologies: scratch
 site_areas: ''
 steps:
 - title: Introduction
-- title: What you will need
-- title: Updating your software
-- title: Opening Scratch
-- title: Running the Flash plug-in
-- title: Looking inside a project
-- title: Allowing Flash to run automatically
-- title: Sounds in Scratch 2.0 on Raspberry Pi
-- title: What next?
-
-
